@@ -3,6 +3,8 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+11/27/24: Added script command to check if Eucentricy by Focus is calibrated.
+
 11/26/24: SEM_4-2-0beta12
 11/26/24: Stored XYinPc values for externally supplied Navigator items.
 
